<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".RegisterAdmin">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Admin_form"
                android:layout_marginLeft="30dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="30sp"/>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:boxBackgroundColor="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:inputType="text"
                    android:id="@+id/name"
                    android:hint="name"
                    android:maxLines="3"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:boxBackgroundColor="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email1"
                    android:hint="Enter your email"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:endIconMode="password_toggle"
                app:boxBackgroundColor="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass1"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="3"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:endIconMode="password_toggle"
                app:boxBackgroundColor="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm"
                    android:hint="@string/confirm_password"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signup_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="50dp"
                    android:padding="8dp"
                    android:text="register_admin"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/admin_Login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="105dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="50dp"
                    android:padding="8dp"
                    android:text="have_account"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_loginad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="160dp"
                    android:gravity="center"
                    android:text="@string/have_account_login"
                    android:textColor="@color/black"
                    android:textSize="23sp" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>


































